# derfla

./: .gitignore  CMakeLists.txt  Derfla.pro  README.md  candidatelist.cpp  candidatelist.h  candidatelist.ui  candidatelistdelegate.cpp  candidatelistwidget.cpp  dependencies.ubuntu  derfla.icns  derfla.pro  derfla.qrc  derflawidget.cpp  derflawidget.h  index.html  osxInfo.plist
src/: CMakeLists.txt  src.pro
src/app/: CMakeLists.txt
src/app/derfla/: CMakeLists.txt  actionexecutor.cpp  actionexecutor.h  derfla-msvc-x64.iss  derfla-msvc-x86.iss  derfla.icns  derfla.pro  derfla.qrc  derfla.rc  derflaapp.cpp  derflaapp.h  main.cpp  osxInfo.plist  stdafx.h
src/app/donate/: CMakeLists.txt  donate.pro  donate.qrc  donate.rc  main.cpp  qrcodedialog.cpp  qrcodedialog.h  qrcodedialog.ui
src/calculator/: CMakeLists.txt  calculator.pro  calculator.qrc  calculator.rc  extension.cfg  extension.derflaext  main.cpp  stdafx.h
src/calculator/core/: evaluator.cpp  evaluator.h  functions.cpp  manualserver.h  settings.cpp
src/calculator/math/: units.cpp
src/calculator/translations/: calculator_en_US.ts  calculator_zh_CN.ts
src/derfla/: CMakeLists.txt  CharLineEdit.cpp  actionexecutor.cpp  actionexecutor.h  autoupdater.cpp  booleaneditor.cpp  booleaneditor.h  candidatelist.cpp  candidatelist.h  candidatelist.ui  candidatelistdelegate.cpp  candidatelistdelegate.h  candidatelistwidget.cpp  candidatelistwidget.h  charlineedit.cpp  derfla-msvc-x64.iss  derfla-msvc-x86.iss  derfla.pro  derfla.qrc  derfla.rc  derflaaction.cpp  derflaaction.h  derflaapp.cpp  derflaapp.h  derflawidget.cpp  derflawidget.h  extension.cpp  extension.h  extensionmanager.cpp  extensionmanager.h  main.cpp  osxInfo.plist  preferencedialog.cpp  preferencedialog.h  preferencedialog.ui  qrcodedialog.cpp  qrcodedialog.ui  skinmanager.cpp  skinmanager.h  stdafx.h  (+2 more)
src/derfla/alfred/: alfredworkflow.cpp  alfredworkflow.h  alfredworkflowaction.cpp  alfredworkflowaction.h  alfredworkflowinput.cpp  alfredworkflowinput.h  alfredworkflowoutput.cpp  alfredworkflowoutput.h  alfredworkflowscriptescape.cpp  alfredworkflowscriptescape.h  alfredworkflowtrigger.cpp  alfredworkflowtrigger.h
src/derfla/alfredui/: alfredlistwidget.cpp  alfredlistwidget.h  alfredtheme.cpp  alfredtheme.h  alfredwidget.cpp  alfredwidget.h  alfredwidget.ui  config.cpp  config.h  defaulsearch.cpp  doublelistitem.cpp  doublelistitem.h  geticon.h  gpixbuftoqicon.cpp  gpixbuftoqicon.h  listitem.cpp  listitem.h  plaintext.cpp  plaintext.h  setting.cpp  theme.cpp  theme.h  thememanager.cpp  thememanager.h  widget.cpp  widget.h  widgetthread.cpp
src/derfla/commonui/: booleaneditor.cpp  booleaneditor.h  commonwidget.cpp  commonwidget.h  preferencedialog.cpp  preferencedialog.h  preferencedialog.ui
src/derfla/derflaui/: candidatelist.cpp  candidatelist.h  candidatelistdelegate.cpp  candidatelistdelegate.h  candidatelistwidget.cpp  candidatelistwidget.h  charlineedit.cpp  charlineedit.h  derflawidget.cpp  derflawidget.h  skinmanager.cpp  skinmanager.h
src/derfla/execute/: alfredworkflow.cpp  alfredworkflow.h  dbrw.cpp  dbrw.h  derflaaction.cpp  derflaaction.h  localfsscanner.cpp  localfsscanner.h  util.cpp  win_util.cpp  win_util.h
src/derfla/executil/: executorrunner.cpp  executorrunner.h  processwrapper.cpp  processwrapper.h
src/derfla/executor/: bashexecutor.cpp  bashexecutor.h  executor.cpp  executor.h  executorrunner.cpp  executorrunner.h  osascriptexecutor.cpp  osascriptexecutor.h  perlexecutor.cpp  perlexecutor.h  phpexecutor.cpp  phpexecutor.h  pythonexecutor.cpp  pythonexecutor.h  rubyexecutor.cpp  rubyexecutor.h  scriptescape.cpp  scriptescape.h  zshexecutor.cpp  zshexecutor.h
src/derfla/extension/: extension.cpp  extension.h  extensionmanager.cpp  extensionmanager.h  extensionmodel.cpp  extensionmodel.h
src/derfla/gui/: CharLineEdit.cpp  WinIconProvider.cpp  WinIconProvider.h  actionexecutor.cpp  actionexecutor.h  candidatelist.cpp  candidatelist.h  candidatelist.ui  candidatelistdelegate.cpp  candidatelistdelegate.h  candidatelistwidget.cpp  candidatelistwidget.h  derflaaction.cpp  derflaaction.h  derflawidget.cpp  derflawidget.h
src/derfla/lfs/: dbrw.cpp  dbrw.h  derflaaction.h  localfsscanner.cpp  util.cpp  util.h
src/derfla/macui/: darkmode.h
src/derfla/rc/: updater-dsa-pub.pem
src/derfla/skins/: bianhua.derflaskin  bianhua.xml  black.xml  black_glass.derflaskin  black_glass.xml  derfla.xml  (+32 more)
src/donate/: CMakeLists.txt  donate.pro  donate.qrc  donate.rc  main.cpp  qrcodedialog.cpp  qrcodedialog.h  qrcodedialog.ui
src/everything/: CMakeLists.txt  everything.pro  everything.rc  extension.cfg  extension.derflaext  main.cpp  mdfindwrapper.h  mdfindwrapper.mm  stdafx.h
src/extensions/: CMakeLists.txt
src/hashdigest/: CMakeLists.txt  extension.cfg  extension.derflaext  hashdigest.pro  hashdigest.qrc  hashdigest.rc  main.cpp  stdafx.h
src/lfs/: CMakeLists.txt  dbrw.cpp  dbrw.h  extension.cfg  extension.derflaext  lfs.pro  lfs.rc  localfsitem.cpp  localfsitem.h  localfsscanner.cpp  localfsscanner.h  localserver.cpp  localserver.h  localsocket.cpp  localsocket.h  main.cpp  stdafx.h
src/libs/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/translator/: translatehelperpage.cpp
src/util/: CMakeLists.txt  WinIconProvider.cpp  WinIconProvider.h  derfla.i  derflaaction.h  derflainfo.cpp  derflainfo.h  derflaluawarpper.h  derflaluawrapper.cpp  derflautil.cpp  derflautil.h  directory.cpp  directory.h  luavm.cpp  luavm.h  luawrapper.cpp  luawrapper.h  scopedguard.cpp  scopedguard.h  stdafx.h  unix_util.cpp  unix_util.h  util.cpp  util.h  util.pri  util.pro  util.qrc  util.rc  util_global.h  win_util.cpp  win_util.h
src/weather/: CMakeLists.txt  extension.derflaext  heweather.cpp  heweather.h  main.cpp  stdafx.h  weather.pro  weather.qrc  weather.rc
src/webdict/: CMakeLists.txt  bing.cpp  bing.h  extension.cfg  extension.derflaext  main.cpp  stdafx.h  webdict.pro  webdict.qrc  webdict.rc  youdao.cpp  youdao.h
src/websearch/: CMakeLists.txt  extension.cfg  extension.derflaext  main.cpp  websearch.pro  websearch.qrc  websearch.rc
(+415 files in other folders)
