cmake_minimum_required(VERSION 3.15)
project(DerflaSrc VERSION 1.0.0)

add_subdirectory(util)
add_subdirectory(calculator)
add_subdirectory(donate)
add_subdirectory(hashdigest)
add_subdirectory(lfs)
#add_subdirectory(translator)
add_subdirectory(weather)
add_subdirectory(webdict)
add_subdirectory(websearch)
IF(WIN32)
    add_subdirectory(everything)
ENDIF(WIN32)
add_subdirectory(derfla)